# Knowledge-Intake-Workbench-Intelligence_KIWI

./: .gitignore  BEGINNER_WALKTHROUGHS.md  DOCUMENTATION_MAP.md  QUICK_START_WINDOWS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_WINDOWS_GUIDE.md  Start Here.bat  USER_GUIDE.md  start_kiwi.bat  stop_kiwi.bat
kiwi_desktop/: .env.example  DEVELOPER_GUIDE.md  README.md  archive_prep_tool_gui.py  main.py  pyproject.toml  requirements.txt
kiwi_desktop/api/: __init__.py  dependencies.py  main.py  package-lock.json
kiwi_desktop/cli/: __init__.py  app.py
kiwi_desktop/db/: __init__.py  migrations.py  schema.sql  session.py
kiwi_desktop/docs/: architecture.md  developer_handoff_wiki_overclassification.md  getting-started.html  user_guide.md
kiwi_desktop/gui/: __init__.py  app.py  controllers.py  main_window.py  setup_wizard.py  theme.py  triage_tab.py  widgets.py
kiwi_desktop/models/: __init__.py  classification_patch.py  enums.py  file_record.py  job_record.py  output_record.py  triage_derivation.py
kiwi_desktop/services/: __init__.py  ai_classifier.py  chunking_service.py  classification_config.py  classification_service.py  exporter_service.py  intake_service.py  inventory_filter.py  inventory_service.py  normalizer_service.py  pipeline_runner.py  project_service.py  review_service.py  run_monitor_service.py  scan_service.py
kiwi_desktop/tests/: __init__.py  conftest.py  test_ai_classifier.py  test_chunking_service.py  test_classification_config.py  test_classification_service.py  test_cli_smoke.py  test_exporter_service.py  test_files_classification_schema.py  (+11 more)
(+99 files in other folders)
